2007-06-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/Makefile.am:
	* libcsupport/src/open_dev_console.c: New file.

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/corerwlock.c: Make sure structure is fully initialized.
	When reused, some fields will not be zero like at initialization.

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/include/confdefs.h: POSIX threads use twice the minimum stack
	size. Account for this.

2007-06-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* configure.ac: Add NDEBUG as a command line compilation option.

2007-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libmd/.cvsignore: New file.

2007-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/defs.h: Eliminate my_strncasecmp.
	* shttpd/string.c: Eliminate my_strncasecmp.

2007-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* wrapup/Makefile.am: Pickup ../libmd/libmd.a.
	* pppd/Makefile.am: Reflect moving out md*.
	* pppd/md4.h, pppd/md4.c, pppd/md5.c, pppd/md5.h: Remove (moved to
	  libmd).
	* libmd/Makefile.am, libmd/md4.c, libmd/md4.h, libmd/md5.c, 
	libmd/md5.h, libmd/preinstall.am: New (moved out from pppd).
	* configure.ac, Makefile.am: Add libmd.

2007-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/defs.h: Eliminate my_strlcpy.
	* shttpd/string.c: Eliminate my_strlcpy.

2007-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/defs.h: Eliminate my_strdup, my_strndup.
	* shttpd/string.c: Eliminate my_strdup, my_strndup.
	* shttpd/Makefile.am: Add -DHAVE_MD5 to use md5 routines from
	  libmd.a.

2007-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* wrapup/Makefile.am: Add libmd.a.

2007-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/Makefile.am: Remove md5 and md4 from libpppd.a.
	  Add pppd/libmd.a.
	* pppd/md4.c: Don't include pppd.h.

2007-06-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/shttpd.ico, shttpd/resources.rc: Remove (Unused).
